--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" /><button id="chatbutton">Send</button>
     </form>
   </body>
 </html>
